--- a/_data/global.yml
+++ b/_data/global.yml
@@ -9,6 +9,6 @@ github: 'securingchange'
 facebook: 'securingchange'
 
 # Admin Settings
-admin_name: 'René Perez'
-admin_email: 'rene@securingchange.org'
+admin_name: 'admin'
+admin_email: ' '
 google_analytics: "UA-9999999-99" # Update with your own tracking ID
