--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,3 +1,3 @@
 main:
-    - { url: '/', text: 'Home' }
-    - { url: '/about', text: 'About' }
+#    - { url: '/', text: 'Home' }
+#    - { url: '/about', text: 'About' }
